Adding swagger-autogen
